--- a/faq.html
+++ b/faq.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
 	<title>MyOrg360 - FAQ</title>
+	<link rel="icon" type="image/png" href="https://myorg360.com/assets/img/logo.png">
 	<!-- <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet"> -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 
@@ -13,7 +18,6 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet">
-
 </head>
 
 <style>p{text-align: justify;}#faq a{color: blue;}#faq a:hover{color: red}
@@ -592,24 +596,14 @@
 					<div class="d-flex">
 
 						<div class="footer-nav">
-
 							<div class="row">
-								<div class="col-md-5 col-sm-12">
-									<a class="js-scroll-trigger" href="#page-top">Home</a><br>
-									<a class="js-scroll-trigger" href="#about">About Us</a>	<br>
-									<a class="js-scroll-trigger" href="#products">Products</a><br>
-								</div>
-
 								<div class="col-md-7 col-sm-12">
-									<div class="footer-nav">
-										<a class="js-scroll-trigger" href="faq.html">F.A.Qs</a><br>
-										<a class="js-scroll-trigger" href="terms_and_condition.html">Terms & Conditions</a><br>
-										<a class="js-scroll-trigger" href="privacy_policy.html">Privacy Policy</a><br>
-									</div>
+									<a class="js-scroll-trigger" href="index.html">Home</a><br>
+									<a class="js-scroll-trigger" href="faq.html">F.A.Qs</a><br>
+									<a class="js-scroll-trigger" href="terms_and_condition.html">Terms & Conditions</a><br>
+									<a class="js-scroll-trigger" href="privacy_policy.html">Privacy Policy</a><br>
 								</div>
-
 							</div>
-
 						</div>
 					</div>
 				</div>
