--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>MyOrg360 - Products</title>
+	<title>MyOrg360 - Home</title>
 	<link rel="icon" type="image/png" href="https://myorg360.com/assets/img/logo.png">
 	
 	<!-- <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet"> -->
@@ -30,7 +30,6 @@
 
 	<!-- owl for Slider -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
-
 </head>
 
 <body id="page-top">
@@ -474,11 +473,11 @@
 											<div class="icon_bg"></div>
 										</div>
 										<div class="icon">
-											<img id="fp-icon" src="assets/img/fp-icons/branding.png" alt="">
+											<img id="fp-icon" src="assets/img/fp-icons/idm.png" alt="">
 										</div>
 									</div>
 									<div class="fp-text">
-										<p class="fp-title">Comapany Branding</p>
+										<p class="fp-title">Enterprise IDM</p>
 									</div>
 								</div>
 							</div>
@@ -890,6 +889,22 @@
 								</div>
 							</div>
 
+							<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+								<div class="super-box">
+									<div class="fp-container">
+										<div class="fp-box-b23">
+											<div class="icon_bg"></div>
+										</div>
+										<div class="icon">
+											<img id="fp-icon" src="assets/img/fp-icons/erp/multi_tenant.png" alt="">
+										</div>
+									</div>
+									<div class="fp-text">
+										<p class="fp-title">Multi-Tenant</p>
+									</div>
+								</div>
+							</div>
+
 						</div>
 						<!-- features icons end-->
 					</div>
@@ -915,58 +930,79 @@
 	</div> 
 
 	<div class="container products-desktop">
-
 		<div class="row">
 			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
-				<img class="img-fluid" src="assets/img/gallary/school-new.jpg" alt="">	
+				<img class="img-fluid" src="assets/img/gallary/vc-new.jpg" alt="">	
 			</div>
 
 			<div class="col-md-1"></div>
 
 			<div class="col-md-7">
 				<p style="text-align: justify;padding-top: 10px;line-height: 30px;">
-				Enterprise Resource Planning, if implemented properly can prove to be the solution of all the small as well as big problems existing in the school management system. MyOrg360 provides school ERP which increases productivity, improves student-teacher collaborations, providesacces from anywhere, increases transparency with parents, reduces cost and usage of natural resources. Along with that, it decreases work load to a great extent.</p>
+				Here's the time for you to have India's own video conferencing tool which lands on here to cater all the needs of video conferencing. SYNC by MyOrg360 delivering it's made in India, superfast and super satisfying video conferencing solution. Having started with HD video, HD audio, screen sharing, hosting upto 1000 participants, it has got many more other features not letting you to settle down for anything less. Get along with us by signing up and bump into India's own safest video conferencing platform.</p>
 			</div>
 		</div>
 		<br><hr>
-
 		<div class="row">
+			<div class="col-md-7">
+				<p style="text-align: justify;padding-top: 10px;line-height: 30px;">
+				Enterprise Resource Planning, if implemented properly can prove to be the solution of all the small as well as big problems existing in the school management system. MyOrg360 provides school ERP which increases productivity, improves student-teacher collaborations, providesacces from anywhere, increases transparency with parents, reduces cost and usage of natural resources. Along with that, it decreases work load to a great extent.</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
+				<img class="img-fluid" src="assets/img/gallary/school-new.jpg" alt="">	
+			</div>			
+		</div>
+		<br><hr>
+		<div class="row">
+			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
+				<img class="img-fluid" src="assets/img/gallary/online-exam-new.jpg" alt="">
+			</div>
+			<div class="col-md-1"></div>
 			<div class="col-md-7">
 				<p style="text-align: justify;line-height: 35px;">
 					Witnessing the situation of COVID outbreak, we have to be ready for situations like this anytime. Examinations are important aspect of any education system and hence MyOrg360 provides all the facilities and provisions to conduct online examinations. Ranging with the tools in the software to AI implemented check on students it provides the overall solution.
 				</p>
 			</div>
-			<div class="col-md-1"></div>
-			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
-				<img class="img-fluid" src="assets/img/gallary/online-exam-new.jpg" alt="">
-			</div>
 		</div>
 		<br><hr>
-
 		<div class="row">
-			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
-				<img class="img-fluid" src="assets/img/gallary/ai-based-new.jpg" alt="">
-			</div>
-			<div class="col-md-1"></div>
 			<div class="col-md-7">
 				<p style="text-align: justify;padding-top: 10px;line-height: 35px;">MyOrg360 offers products which are based on Artificial – Intelligence and machine learning based products which provides the online solutions for the problems that can’t be sorted out while doing online video conferencing such as security issues during examinations, attendance systems etc.</p>
 			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
+				<img class="img-fluid" src="assets/img/gallary/ai-based-new.jpg" alt="">
+			</div>
 		</div>
 		<br><hr>
-
 		<div class="row">
+			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
+				<img class="img-fluid" src="assets/img/gallary/data-analytics-new.jpg" alt="">
+			</div>
+			<div class="col-md-1"></div>
 			<div class="col-md-7">
 				<p style="text-align: justify;line-height: 30px;">
 				MyOrg360 provides faster and more accurate reporting, analysis or planning, better business related decisions, improved employee satisfaction and improved data quality topping the list. Benefits achieved least frequently include reducing costs, increasing revenues and reducing IT headcount. Hence data analytics and businuess intelligence softwares upholds MyOrg360 to a very large extent.</p>
-			</div>
-			<div class="col-md-1"></div>
-			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
-				<img class="img-fluid" src="assets/img/gallary/data-analytics-new.jpg" alt="">
 			</div>
 		</div>
 	</div>
 
 	<div class="container products-mobile">
+		<div class="row">
+			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
+				<img class="img-fluid" src="assets/img/gallary/vc-new.jpg" alt="">	
+			</div>
+
+			<div class="col-md-1"></div>
+
+			<div class="col-md-7">
+				<p style="text-align: justify;padding-top: 10px;line-height: 30px;">
+				Here's the time for you to have India's own video conferencing tool which lands on here to cater all the needs of video conferencing. SYNC by MyOrg360 delivering it's made in India, superfast and super satisfying video conferencing solution. Having started with HD video, HD audio, screen sharing, hosting upto 1000 participants, it has got many more other features not letting you to settle down for anything less. Get along with us by signing up and bump into India's own safest video conferencing platform.</p>
+			</div>
+		</div>
+		<br><hr>
+
 		<div class="row">
 			<div class="col-md-4" style="border: 2px solid #eee;border-radius : 5px;box-shadow: 1px 2px 1px 1px #ddd;">
 				<img class="img-fluid" src="assets/img/gallary/school-new.jpg" alt="">	
@@ -1113,9 +1149,9 @@
 
 								<div class="col-md-7 col-sm-12">
 									<div class="footer-nav">
-										<a class="js-scroll-trigger" target="_blank" href="faq.html">F.A.Qs</a><br>
-										<a class="js-scroll-trigger" target="_blank" href="terms_and_condition.html">Terms & Conditions</a><br>
-										<a class="js-scroll-trigger" target="_blank" href="privacy_policy.html">Privacy Policy</a><br>
+										<a class="js-scroll-trigger" href="faq.html">F.A.Qs</a><br>
+										<a class="js-scroll-trigger" href="terms_and_condition.html">Terms & Conditions</a><br>
+										<a class="js-scroll-trigger" href="privacy_policy.html">Privacy Policy</a><br>
 									</div>
 								</div>
 
@@ -1184,7 +1220,7 @@
 <script src="assets/js/mob.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
- <script>		
+<script>		
 	$(document).ready(function() {
 		    $(".news-slider").owlCarousel({
 			        items:3,
