--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -7,9 +7,10 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>MyOrg360 - Products</title>
+	<title>MyOrg360 - Privacy Policy</title>
+	<link rel="icon" type="image/png" href="https://myorg360.com/assets/img/logo.png">
 	<!-- <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet"> -->
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 
 
 	<!-- Bootstrap Core CSS -->
@@ -25,10 +26,6 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet">
-
-	<!-- owl for Slider -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
-
 </head>
 
 <style>
@@ -40,45 +37,9 @@
 <body id="page-top">
 
 	<!-- Header -->
-	<header class="">
-		<div id="logo-div" class="logo-container">
-
-			<div style="width: 100px;" class="logo">
-				<img id="my-logo" src="assets/img/myorg360-logo.png" alt="MyOrg360">
-			</div>
-			<div id="logo-text" class="brand">SYNC<sub><sub>MyOrg360</sub></sub>
-			</div>
-			<br><br><br><br><br><br><br>
-			
-			<!-- 
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm-12 col-md-12 col-lg-5">
-						<div class="main-text">
-							<p class="h1" style="color: #145999;">MyOrg360 - Privacy Policy.</p><br>
-						
-
-						</div>
-					</div>
-
-
-
-					<div class="col-lg-7 col-md-12 col-sm-6">
-						<center>
-							<button id="img-btn" class="btn btn-outline-primary" href="">Go to SYNC</button>
-						</center>
-						 <img id="bg-vector" src="img/bg-master-vector.png" alt="ribbon">
-						<p id="bg-text">India's Own Video Conferencing Tool</p> 
-					</div>
-				</div>
-			</div>  -->
-
-		</div>
-	</header>
 
 <div>
-					<img id="my-logo" src="assets/img/myorg360logo.png" style="height: 150px;width: 150px;margin-top: -130px;margin-bottom: -100px;" alt="MyOrg360">
-
+	<img id="my-logo" src="assets/img/myorg360logo.png" style="height: 150px;width: 150px;margin-top: -30px;margin-bottom: -10px;" alt="MyOrg360">
 </div>
 
 
@@ -234,20 +195,12 @@
 						<div class="footer-nav">
 
 							<div class="row">
-								<div class="col-md-5 col-sm-12">
-									<a class="js-scroll-trigger" href="#page-top">Home</a><br>
-									<a class="js-scroll-trigger" href="#about">About Us</a>	<br>
-									<a class="js-scroll-trigger" href="#products">Products</a><br>
-								</div>
-
 								<div class="col-md-7 col-sm-12">
-									<div class="footer-nav">
-										<a class="js-scroll-trigger" href="faq.html">F.A.Qs</a><br>
-										<a class="js-scroll-trigger" href="terms_and_condition.html">Terms & Conditions</a><br>
-										<a class="js-scroll-trigger" href="privacy_policy.html">Privacy Policy</a><br>
-									</div>
+									<a class="js-scroll-trigger" href="index.html">Home</a><br>
+									<a class="js-scroll-trigger" href="faq.html">F.A.Qs</a><br>
+									<a class="js-scroll-trigger" href="terms_and_condition.html">Terms & Conditions</a><br>
+									<a class="js-scroll-trigger" href="privacy_policy.html">Privacy Policy</a><br>
 								</div>
-
 							</div>
 
 						</div>
@@ -313,7 +266,5 @@
 	<!-- Custom scripts for this template -->
 	<script src="assets/js/index.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-	 
 </body>
 </html>
